crates/lune-ui/tests/snapshots/snapshot_widgets__git_panel_with_changes.snap
---
source: crates/lune-ui/tests/snapshot_widgets.rs
expression: buffer_to_text(&buf)
---
╭ SOURCE CONTROL ─────────────────╮
│ ⎇ main                          │
│ Staged Changes (2)              │
│ M src/main.rs                   │
│ A src/new_file.rs               │
│ Changes (2)                     │
│ M src/lib.rs                    │
│ U temp.txt                      │
│                                 │
│                                 │
│ s/u stage  c commit  d discard  │
╰─────────────────────────────────╯
