crates/lune-ui/tests/snapshots/snapshot_widgets__overlay_command_palette.snap
---
source: crates/lune-ui/tests/snapshot_widgets.rs
expression: buffer_to_text(&buf)
---



                ┌ Command Palette ─────────────────────────────┐
                │>                                             │
                │──────────────────────────────────────────────│
                │  Agent: Close Pane                           │
                │  Agent: Focus Next                           │
                │  Agent: Focus Previous                       │
                │  Agent: Save Current Layout                  │
                │  Agent: Save Layout As…                      │
                └──────────────────────────────────────────────┘
