crates/lune-ui/tests/snapshots/snapshot_widgets__overlay_command_palette_filtered.snap
---
source: crates/lune-ui/tests/snapshot_widgets.rs
assertion_line: 651
expression: buffer_to_text(&buf)
---



                ╭ Command Palette ─────────────────────────────╮
                │> sav                                         │
                │──────────────────────────────────────────────│
                │  Save                                        │
                │  Save All                                    │
                │                                              │
                │                                              │
                │                                              │
                ╰──────────────────────────────────────────────╯
