crates/lune-ui/tests/snapshots/snapshot_widgets__overlay_confirm_dialog.snap
---
source: crates/lune-ui/tests/snapshot_widgets.rs
expression: buffer_to_text(&buf)
---








                    ╭────────────── Confirm ───────────────╮
                    │Discard unsaved changes?              │
                    │                                      │
                    │                                      │
                    │                                      │
                    │       [ Confirm ]  [ Cancel ]        │
                    ╰────  Enter confirm · Esc cancel  ────╯
