crates/lune-ui/tests/snapshots/snapshot_widgets__overlay_image_loading.snap
---
source: crates/lune-ui/tests/snapshot_widgets.rs
expression: text
---


        ╭─────────────────── /tmp/lune-loading.png ────────────────────╮
        │Decoding…                                                     │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        ╰──────────────────────────────────────────────────────────────╯
