crates/lune-ui/tests/snapshots/snapshot_widgets__overlay_inactive.snap
---
source: crates/lune-ui/tests/snapshot_widgets.rs
assertion_line: 679
expression: buffer_to_text(&buf)
---

