crates/lune-ui/tests/snapshots/snapshot_widgets__overlay_key_hints_filtered.snap
---
source: crates/lune-ui/tests/snapshot_widgets.rs
expression: text
---


        ╭───────────────── Keybindings  filter: save ──────────────────╮
        │File                                                          │
        │  Ctrl+S           Save                                       │
        │  Ctrl+K S         Save all                                   │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        ╰──────────────────────────────────────────────────────────────╯
