crates/lune-ui/tests/snapshots/snapshot_widgets__overlay_markdown_preview.snap
---
source: crates/lune-ui/tests/snapshot_widgets.rs
expression: text
---


        ╭──────────────────── README.md (preview) ─────────────────────╮
        │# Title                                                       │
        │                                                              │
        │Body bold and italic.                                         │
        │                                                              │
        │- one                                                         │
        │- two                                                         │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        ╰──────────────────────────────────────────────────────────────╯
