crates/lune-ui/tests/snapshots/snapshot_widgets__status_bar_ai_busy.snap
---
source: crates/lune-ui/tests/snapshot_widgets.rs
expression: buffer_to_text(&buf)
---
 NORMAL  src/main.rs (10,5) │ UTF-8              main             │ ⠧ Working
